Always showing the y scrollbar to avoid jumping when menu appears

--- a/llamrei/web-app/css/main.css
+++ b/llamrei/web-app/css/main.css
@@ -1,6 +1,8 @@
 html * {
     margin: 0;
     /*padding: 0; SELECT NOT DISPLAYED CORRECTLY IN FIREFOX */
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
 }
 
 /* GENERAL */
